--- a/style.css
+++ b/style.css
@@ -15,7 +15,7 @@ h1 {
 }
 
 #yearPrompt {
-  font-size: 2rem;
+  font-size: 3.5rem;
   font-weight: 700;
   margin-top: 10px;
   margin-bottom: 20px;
@@ -24,9 +24,11 @@ h1 {
 }
 
 #yearPrompt span {
+  font-size: 4rem;      
   color: #8b3a3a;
-  text-shadow: 1px 1px 2px rgba(0,0,0,.2);
-}
+  display: inline-block;
+  padding-left: 8px;
+  text-shadow: 2px 2px 4px rgba(0,0,0,.25);
 
 /* Input & button */
 #guessInput {
