--- a/style.css
+++ b/style.css
@@ -29,6 +29,7 @@ h1 {
   display: inline-block;
   padding-left: 8px;
   text-shadow: 2px 2px 4px rgba(0,0,0,.25);
+}
 
 /* Input & button */
 #guessInput {
