--- a/style.css
+++ b/style.css
@@ -95,6 +95,20 @@ h1 {
   border-radius: 4px;
 }
 
+#bio {
+  display: none;
+  max-width: 200px;
+  margin: 20px auto;
+  text-align: left;
+  font-size: 1rem;
+  line-height: 1.5;
+}
+
+#bio {
+  max-width: 600px;
+}
+
+
 .attribution {
   margin-top: 60px;
   text-align: center;
